--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -31,3 +31,5 @@
 <br>
 
 <%= link_to 'New Contact', new_contact_path %>
+<% argb = "Ai..." %>
+<%= render partial: "/contacts/shared/teste", locals:{ vari: argb} %>
