--- a/public/templates/form.css
+++ b/public/templates/form.css
@@ -54,8 +54,8 @@
     padding: 5px 3px 3px 5px;
 }
 .basic-grey select {
-    background: #FFF image-url('down-arrow.png') no-repeat right;
-    background: #FFF image-url('down-arrow.png') no-repeat right;
+    background: #FFF url('down-arrow.png') no-repeat right;
+    background: #FFF url('down-arrow.png') no-repeat right);
     appearance:none;
     -webkit-appearance:none;
     -moz-appearance: none;
