--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: contact, local: true) do |form| %>
+<%= form_with(model: contact, local: true, class: "basic-grey") do |form| %>
   <% if contact.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(contact.errors.count, "error") %> prohibited this contact from being saved:</h2>
@@ -10,7 +10,7 @@
       </ul>
     </div>
   <% end %>
-
+  <h1>Contatos</h1>
   <div class="field">
     <%= form.label :name %>
     <%= form.text_field :name, id: :contact_name %>
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= form.label :kind_id %>
-    <%= form.text_field :kind_id, id: :contact_kind_id %>
+    <%= collection_select :contact, :kind_id, @list_all_kinds, :id, :description %>
   </div>
 
   <div class="field">
@@ -32,6 +32,7 @@
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "Enviar", class:"button" %>
+    <%= link_to 'Back', contacts_path, class:"button" %>
   </div>
 <% end %>
