--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Seja Bem Vindo a Agenda Rails</h1>
 <%= mostrar_meu_nome %>
+
+<h2><%= t 'hello' %></h2>
 <ul>
   <li><%= link_to "Contatos", contacts_path%></li>
   <li><%= link_to "Tipos", kinds_path%></li>
