--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,14 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Contacts</h1>
+<h1><%= @contacts.model.model_name.human(count: @contacts.size) %></h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th>Kind</th>
-      <th>Rmk</th>
+      <th><%= @contacts.model.human_attribute_name('name') %></th>
+      <th><%= @contacts.model.human_attribute_name('email') %></th>
+      <th><%= @contacts.model.human_attribute_name('kind') %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,10 +18,9 @@
         <td><%= contact.name %></td>
         <td><%= contact.email %></td>
         <td><%= contact.kind.description %></td>
-        <td><%= contact.rmk %></td>
-        <td><%= link_to 'Show', contact %></td>
-        <td><%= link_to 'Edit', edit_contact_path(contact) %></td>
-        <td><%= link_to 'Destroy', contact, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to t('button.show'), contact %></td>
+        <td><%= link_to t('button.edit'), edit_contact_path(contact) %></td>
+        <td><%= link_to t('button.destroy'), contact, method: :delete, data: { confirm: t('messages.delete') } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -30,6 +28,6 @@
 
 <br>
 
-<%= link_to 'New Contact', new_contact_path %>
+<%= link_to t('button.new'), new_contact_path %>
 <% argb = "Ai..." %>
 <%= render partial: "/contacts/shared/teste", locals:{ vari: argb} %>
