--- a/app/views/contacts/_phone_fields.html.erb
+++ b/app/views/contacts/_phone_fields.html.erb
@@ -1,4 +1,3 @@
-<div class="nested_fields">
-  <%= form.label :phone %>
-  <%= form.text_field :phone %>
+<div class="nested-fields">
+  <%= f.text_field :phone %>
 </div>
