--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,31 +1,30 @@
-<p id="notice"><%= notice %></p>
-<%= @contacts.count %>
-<h1><%= @contacts.model.model_name.human(count: @contacts.size) %></h1>
-
-<table>
-  <thead>
-    <tr>
-      <th><%= @contacts.model.human_attribute_name('name') %></th>
-      <th><%= @contacts.model.human_attribute_name('email') %></th>
-      <th><%= @contacts.model.human_attribute_name('kind') %></th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @contacts.each do |contact| %>
+<div class="basic-grey">
+  <p id="notice"><%= notice %></p>
+  <h1><%= @contacts.model.model_name.human(count: @contacts.size) %> (<%= @contacts.count %>)</h1>
+  <table>
+    <thead>
       <tr>
-        <td><%= contact.name %></td>
-        <td><%= contact.email %></td>
-        <td><%= contact.kind.description %></td>
-        <td><%= link_to t('button.show'), contact %></td>
-        <td><%= link_to t('button.edit'), edit_contact_path(contact) %></td>
-        <td><%= link_to t('button.destroy'), contact, method: :delete, data: { confirm: t('messages.delete') } %></td>
+        <th><%= @contacts.model.human_attribute_name('name') %></th>
+        <th><%= @contacts.model.human_attribute_name('kind') %></th>
+        <th colspan="3">Ações</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @contacts.each do |contact| %>
+        <tr>
+          <td><%= contact.name %></td>
+          <td><%= contact.kind.description %></td>
+          <td><%= link_to t('button.show'), contact %></td>
+          <td><%= link_to t('button.edit'), edit_contact_path(contact) %></td>
+          <td><%= link_to t('button.destroy'), contact, method: :delete, data: { confirm: t('messages.delete') } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to t('button.new'), new_contact_path %>
+  <br>
+
+  <%= link_to t('button.new'), new_contact_path %>
+
+</div>
