--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,12 @@
-<h1>Seja Bem Vindo a Agenda Rails</h1>
-<%= mostrar_meu_nome %>
+<div class="basic-grey">
+  <h1>Seja Bem Vindo a Agenda Rails</h1>
+  <%= mostrar_meu_nome %>
 
-<h2><%= t 'hello' %></h2>
-<ul>
-  <li><%= link_to "Contatos", contacts_path%></li>
-  <li><%= link_to "Tipos", kinds_path%></li>
-  <li><%= link_to "Endereços", addresses_path%></li>
-  <li><%= link_to "Telefones", phones_path%></li>
-</ul>
+  <h2><%= t 'hello' %></h2>
+  <ul>
+    <li><%= link_to "Contatos", contacts_path%></li>
+    <li><%= link_to "Tipos", kinds_path%></li>
+    <li><%= link_to "Endereços", addresses_path%></li>
+    <li><%= link_to "Telefones", phones_path%></li>
+  </ul>
+</div>
